testsuite/tests/rename/should_fail/RnStaticValuesFail03.hs
{-# LANGUAGE StaticValues #-}

module RnStaticValuesFail03 where

f x = static (x . id)
